--- a/apiDefinitions.yml
+++ b/apiDefinitions.yml
@@ -7,10 +7,6 @@
 
 Authentication:
   Authenticate:
-    errorCodes:
-      - WrongIdentityType
-      - NoUser
-      - AuthenticationFailed
     url: /auth/:origin
     method: POST
     passAuth: true
@@ -19,3 +15,36 @@ Authentication:
         idToken: string
     responseDataType:
       sessionToken: string
+    errorCodes:
+      - WrongIdentityType
+      - NoUser
+      - AuthenticationFailed
+User:
+  SignUp:
+    url: /user
+    method: POST
+    passAuth: true
+    requestBodyType:
+      username: string
+      origin: string
+      authenticationRequestData:
+        idToken: string
+    errorCodes:
+      - WrongOrigin
+      - AuthenticationFailed
+      - NoIdentity
+      - CreateUserFailed
+  RequestPresignedPostFieldsForAvatar:
+    url: /user/avatar/presignedPost
+    method: GET
+    passAuth: false
+    responseDataType:
+      url: string
+      fields: "{ [key: string]: string }"
+      key: string
+  UpdateAvatar:
+    url: /user/avatar
+    method: PUT
+    passAuth: false
+    requestBodyType:
+      key: string
