--- a/apiDefinitions.yml
+++ b/apiDefinitions.yml
@@ -1,16 +1,15 @@
 # Service:
 #   Api:
 #     errorCodes: stirng[]
-#     url: string
+#     passAuth: true
 #     requestBodyType: { [key: string]: type}
 #     responseDataType: { [key: string]: type}
 
 authentication:
   authenticate:
-    url: /auth/:origin
-    method: POST
     passAuth: true
     requestBodyType:
+      origin: string
       authenticationRequestData:
         idToken: string
     responseDataType:
@@ -21,8 +20,6 @@ authentication:
       - AuthenticationFailed
 user:
   signUp:
-    url: /user
-    method: POST
     passAuth: true
     requestBodyType:
       username: string
@@ -35,15 +32,11 @@ user:
       - NoIdentity
       - CreateUserFailed
   updateAvatar:
-    url: /user/avatar
-    method: PUT
     passAuth: false
     requestBodyType:
       key: string
 post:
   writePost:
-    url: /post
-    method: POST
     passAuth: false
     requestBodyType:
       title: string
@@ -53,18 +46,16 @@ post:
     responseDataType:
       postId: number
   encodeMedia:
-    url: /post/encode/:s3Key
-    method: POST
     passAuth: false
+    requestBodyType:
+      s3Key: string
   likePost:
-    url: /post/:postId/like
-    method: POST
     passAuth: false
     errorCodes:
       - NotFoundPost
+    requestBodyType:
+      postId: number
   requestPresignedPostFieldsForContent:
-    url: /post/presignedPost
-    method: GET
     passAuth: false
     responseDataType:
       url: string
@@ -72,13 +63,11 @@ post:
       key: string
 board:
   createBoard:
-    url: /board/:boardName
-    method: POST
     passAuth: false
+    requestBodyType:
+      boardName: string
 comment:
   writeComment:
-    url: /comment
-    method: POST
     passAuth: false
     requestBodyType:
       contentS3Key: string
@@ -86,16 +75,15 @@ comment:
     responseDataType:
       commentId: number
   likeComment:
-    url: /comment/:commentId/like
-    method: POST
     passAuth: false
     errorCodes:
       - NotFoundComment
+    requestBodyType:
+      commentId: number
   writeSubComment:
-    url: /comment/:parentCommentId
-    method: POST
     passAuth: false
     requestBodyType:
+      parentCommentId: string
       contentS3Key: string
       postId: number
     responseDataType:
@@ -104,14 +92,12 @@ comment:
       - NotFoundParentComment
 viewCount:
   increaseViewCount:
-    url: /post/:postId/view
     baseServerUrl: https://viewcount.humorgrad.com
-    method: POST
     passAuth: true
+    requestBodyType:
+      postId: number
 media:
   requestPresignedPostFieldsForMedia:
-    url: /media/presignedPost
-    method: GET
     passAuth: false
     responseDataType:
       url: string
