--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^7.0.1",
     "js-yaml": "^3.12.1"
   },
   "devDependencies": {}
